--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
 .App {
   text-align: center;
 }
-
+* {
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -35,4 +37,54 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+li {
+  display: flex;
+  justify-content: space-between;
+
+  margin-bottom: 3%;
+  border: 2px groove black;
+  margin-left: 10%;
+  margin-right: 10%;
+  color: rgb(230, 228, 228);
+  background-color: rgb(100, 99, 99);
+  transition: 0.2s ease;
+}
+li:hover {
+  margin-left: 9%;
+  margin-right: 9%;
+}
+span {
+  margin-left: 10%;
+}
+form {
+  display: grid;
+  justify-content: space-around;
+  text-align: left;
+  gap: 4px;
+  border: 1px black solid;
+  border-radius: 9px;
+  margin-left: 20%;
+  margin-right: 20%;
+  padding-bottom: 8%;
+  margin-top: 8%;
+}
+button[type="submit"] {
+  align-self: center;
+  border-radius: 4px;
+  box-shadow: 1px 1px 1px 1px black;
+}
+button[type="submit"]:hover {
+  background-color: blanchedalmond;
+}
+li button {
+  background-color: transparent;
+  border: none;
+  color: white;
 }
